# kg-rag-assistant

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  sample.txt  sample_long.txt
app/: main.py
app/api/routes/: documents.py  search.py
app/core/: config.py  logging.py  neo4j.py  qdrant.py
app/repositories/: neo4j_repository.py  qdrant_repository.py
app/schemas/: documents.py  search.py
app/services/: answer_service.py  document_parser.py  embedding_service.py  entity_extraction_service.py  ingestion_service.py  search_service.py  text_chunker.py
kg_rag_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
streamlit_app/: Home.py
streamlit_app/pages/: 1_Document_Ingestion.py  2_Search_Chat.py
tests/: test_answer_service.py  test_config_and_logging.py  test_document_ingestion_page.py  test_document_parser.py  test_documents_api.py  test_embedding_service.py  test_entity_extraction_service.py  test_ingestion_service.py  test_main.py  test_neo4j.py  test_neo4j_repository.py  test_qdrant.py  test_qdrant_repository.py  test_search_api.py  test_search_service.py  test_streamlit_home.py  test_text_chunker.py
