[project]
name = "kg-rag-assistant"
version = "0.1.0"
description = "Hybrid KG + RAG assistant with Streamlit, FastAPI, Qdrant, and Neo4j"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "streamlit>=1.44.0,<2.0.0",
  "qdrant-client>=1.9.0,<2.0.0",
  "neo4j>=5.22.0,<6.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "httpx>=0.27.0,<1.0.0",
  "orjson>=3.10.0,<4.0.0",
  "tenacity>=8.3.0,<9.0.0",
  "networkx>=3.3,<4.0",
  "unstructured>=0.15.0,<1.0.0",
  "pypdf>=5.0.0,<6.0.0",
  "python-multipart>=0.0.9,<1.0.0", 
  "transformers>=4.46.0,<5.0.0",
  "sentence-transformers>=3.0.0,<4.0.0",
  "torch>=2.2.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "ruff>=0.5.0,<1.0.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "streamlit_app*"]

[tool.ruff]
line-length = 100
src = ["app", "streamlit_app", "tests"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

